// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextOptions Desktop view should handle multiple text elements 1`] = `
<div>
  <div
    class="panel"
  >
    <div>
      mock-font-family-selector value:
      Arial
       hasMultiValue:
      false
      <select>
        <option
          value="Arial"
        >
          Arial
        </option>
        <option
          value="Times New Roman"
        >
          Times New Roman
        </option>
        <option
          value="Helvetica"
        >
          Helvetica
        </option>
      </select>
    </div>
    <div
      class="row"
    >
      <div>
        mock-font-size-control value:
        200
         hasMultiValue:
        false
        <input />
      </div>
      <div>
        mock-font-style-selector value:
        Regular
         hasMultiValue:
        false
        <select>
          <option
            value="Regular"
          >
            Regular
          </option>
          <option
            value="Bold"
          >
            Bold
          </option>
        </select>
      </div>
    </div>
    <div
      class="row"
    >
      <div>
        mock-line-spacing-control value:
        1
         hasMultiValue:
        false
        <input />
      </div>
      <div>
        mock-letter-spacing-control value:
        0
         hasMultiValue:
        false
        <input />
      </div>
      <div>
        mock-vertical-text-toggle value:
        false
        <button
          id="vertical-text"
        >
          Toggle
        </button>
      </div>
      <div>
        mock-infill-block elems:
        1
         label:
         id:
      </div>
    </div>
  </div>
</div>
`;

exports[`TextOptions Desktop view should render correctly for multi-line text 1`] = `
<div>
  <div
    class="panel"
  >
    <div>
      mock-font-family-selector value:
      Arial
       hasMultiValue:
      false
      <select>
        <option
          value="Arial"
        >
          Arial
        </option>
        <option
          value="Times New Roman"
        >
          Times New Roman
        </option>
        <option
          value="Helvetica"
        >
          Helvetica
        </option>
      </select>
    </div>
    <div
      class="row"
    >
      <div>
        mock-font-size-control value:
        200
         hasMultiValue:
        false
        <input />
      </div>
      <div>
        mock-font-style-selector value:
        Regular
         hasMultiValue:
        false
        <select>
          <option
            value="Regular"
          >
            Regular
          </option>
          <option
            value="Bold"
          >
            Bold
          </option>
        </select>
      </div>
    </div>
    <div
      class="row"
    >
      <div>
        mock-line-spacing-control value:
        1
         hasMultiValue:
        false
        <input />
      </div>
      <div>
        mock-letter-spacing-control value:
        0
         hasMultiValue:
        false
        <input />
      </div>
      <div>
        mock-vertical-text-toggle value:
        false
        <button
          id="vertical-text"
        >
          Toggle
        </button>
      </div>
      <div>
        mock-infill-block elems:
        1
         label:
         id:
      </div>
    </div>
  </div>
</div>
`;

exports[`TextOptions Desktop view should render correctly for text path 1`] = `
<div>
  <div
    class="panel"
  >
    <div>
      mock-font-family-selector value:
      Arial
       hasMultiValue:
      false
      <select>
        <option
          value="Arial"
        >
          Arial
        </option>
        <option
          value="Times New Roman"
        >
          Times New Roman
        </option>
        <option
          value="Helvetica"
        >
          Helvetica
        </option>
      </select>
    </div>
    <div
      class="row"
    >
      <div>
        mock-font-size-control value:
        200
         hasMultiValue:
        false
        <input />
      </div>
      <div>
        mock-font-style-selector value:
        Regular
         hasMultiValue:
        false
        <select>
          <option
            value="Regular"
          >
            Regular
          </option>
          <option
            value="Bold"
          >
            Bold
          </option>
        </select>
      </div>
    </div>
    <div>
      mock-letter-spacing-control value:
      0
       hasMultiValue:
      false
      <input />
    </div>
    <div>
      mock-start-offset-block value:
      0
       hasMultiValue:
      false
      <input />
    </div>
    <div>
      mock-vertical-align-block value:
      1
       hasMultiValue:
      false
      <button>
        Top
      </button>
    </div>
    <div>
      mock-infill-block elems:
      1
       label:
      Text Infill
       id:
    </div>
    <div>
      mock-infill-block elems:
      0
       label:
      Path Infill
       id:
      path_infill
    </div>
  </div>
</div>
`;

exports[`TextOptions Mobile view should render correctly for multi-line text in mobile 1`] = `
<div>
  <div>
    mock-object-panel-select id:font_family label:Font Family
    <select>
      <option
        value="Arial"
      >
        Arial
      </option>
      <option
        value="Times New Roman"
      >
        Times New Roman
      </option>
      <option
        value="Helvetica"
      >
        Helvetica
      </option>
    </select>
  </div>
  <div>
    mock-font-style-selector value:
    Regular
     hasMultiValue:
    false
    <select>
      <option
        value="Regular"
      >
        Regular
      </option>
      <option
        value="Bold"
      >
        Bold
      </option>
    </select>
  </div>
  <div>
    mock-font-size-control value:
    200
     hasMultiValue:
    false
    <input />
  </div>
  <div>
    mock-line-spacing-control value:
    1
     hasMultiValue:
    false
    <input />
  </div>
  <div>
    mock-letter-spacing-control value:
    0
     hasMultiValue:
    false
    <input />
  </div>
  <div>
    mock-vertical-text-toggle value:
    false
    <button
      id="vertical-text"
    >
      Toggle
    </button>
  </div>
</div>
`;

exports[`TextOptions Mobile view should render correctly for text path in mobile 1`] = `
<div>
  <div>
    mock-object-panel-select id:font_family label:Font Family
    <select>
      <option
        value="Arial"
      >
        Arial
      </option>
      <option
        value="Times New Roman"
      >
        Times New Roman
      </option>
      <option
        value="Helvetica"
      >
        Helvetica
      </option>
    </select>
  </div>
  <div>
    mock-font-style-selector value:
    Regular
     hasMultiValue:
    false
    <select>
      <option
        value="Regular"
      >
        Regular
      </option>
      <option
        value="Bold"
      >
        Bold
      </option>
    </select>
  </div>
  <div>
    mock-font-size-control value:
    200
     hasMultiValue:
    false
    <input />
  </div>
  <div>
    mock-letter-spacing-control value:
    0
     hasMultiValue:
    false
    <input />
  </div>
  <div>
    mock-start-offset-block value:
    0
     hasMultiValue:
    false
    <input />
  </div>
  <div>
    mock-vertical-align-block value:
    1
     hasMultiValue:
    false
    <button>
      Top
    </button>
  </div>
  <div>
    mock-infill-block elems:
    1
     label:
    Text Infill
     id:
  </div>
  <div>
    mock-infill-block elems:
    0
     label:
    Path Infill
     id:
    path_infill
  </div>
</div>
`;

exports[`TextOptions Mobile view should render correctly in mobile mode 1`] = `
<div>
  <div>
    mock-object-panel-select id:font_family label:Font Family
    <select>
      <option
        value="Arial"
      >
        Arial
      </option>
      <option
        value="Times New Roman"
      >
        Times New Roman
      </option>
      <option
        value="Helvetica"
      >
        Helvetica
      </option>
    </select>
  </div>
  <div>
    mock-font-style-selector value:
    Regular
     hasMultiValue:
    false
    <select>
      <option
        value="Regular"
      >
        Regular
      </option>
      <option
        value="Bold"
      >
        Bold
      </option>
    </select>
  </div>
  <div>
    mock-font-size-control value:
    200
     hasMultiValue:
    false
    <input />
  </div>
  <div>
    mock-line-spacing-control value:
    1
     hasMultiValue:
    false
    <input />
  </div>
  <div>
    mock-letter-spacing-control value:
    0
     hasMultiValue:
    false
    <input />
  </div>
  <div>
    mock-vertical-text-toggle value:
    false
    <button
      id="vertical-text"
    >
      Toggle
    </button>
  </div>
</div>
`;
